<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HisApplication</string>
    <string name="email">Email</string>
    <string name="email_hint">example@gmail.com</string>
    <string name="password_hint">some#password</string>
    <string name="reset_email">Email :</string>
    <string name="confirm_new_password">Confirm new password :</string>
    <string name="password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="login">Login</string>
    <string name="reset_password">Forgot password ?</string>
    <string name="old_password">Old password :</string>
    <string name="new_password">New password :</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account? Register now.</string>
    <string name="logout_btn">Logout</string>
    <string name="reset_btn">reset</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>