<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/space_default">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/tvResetEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_default"
            android:text="@string/reset_email" />

        <EditText
            android:id="@+id/etEmailAddress"
            style="@style/textInputDefault"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_default"/>

        <TextView
            android:id="@+id/tvOldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_default"
            android:text="@string/old_password" />

        <EditText
            android:id="@+id/etOldPassword"
            style="@style/textInputDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            />

        <TextView
            android:id="@+id/tvNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/new_password" />

        <EditText
            android:id="@+id/etNewPassword"
            style="@style/textInputDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:inputType="textPassword"
            android:imeOptions="actionNext"/>

        <TextView
            android:id="@+id/tvConfirmNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_default"
            android:text="@string/confirm_new_password" />

        <EditText
            android:id="@+id/etConfirmNewPassword"
            style="@style/textInputDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_default"
            android:inputType="textPassword"
            android:imeOptions="actionGo"/>

        <Button
            android:id="@+id/btnResetPassword"
            android:textColor="@color/colorTextWhite"
            android:backgroundTint="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/reset_btn" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/pgReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>